--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -40,6 +40,7 @@ nav a {
     text-decoration: none;
     color: var(--white);
     letter-spacing: 1px;
+    padding-bottom: 5px;
 }
 
 .nav-item:hover {
@@ -127,7 +128,7 @@ section p {
 
 div img {
     height: 200px;
-    margin: 5px;
+    margin: 1.5rem;
     border: 2px solid var(--brown);
     display: flex;
     justify-content: flex-end;
@@ -190,6 +191,8 @@ h4 {
     padding: 2em;
     display: flex;
     justify-content: space-around;
+    background-color: #cecece;
+
 }
 
 
