edited some import lines

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -199,6 +199,12 @@ h4 {
     bottom: 1px;
 }
 
+.resume {
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 footer {
     font-size: 65%;
     letter-spacing: 2px;
