--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,6 +41,16 @@ nav a {
 
 }
 
+.active {
+    position: relative;
+    transition: left 1.2s ease-in-out;
+    left: -100%;
+}
+
+.animate-in-left {
+    left: 0;
+}
+
 .select {
     color: #f4f4f4;
 
