--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,7 +13,6 @@ h1 {
     font-size: 190%;
     font-weight: 900;
     letter-spacing: 2px;
-    color: var(--dark);
     flex-grow: 2;
     padding-top: 3px;
     padding-left: 7px;
@@ -41,14 +40,14 @@ nav a {
 
 }
 
-.active {
-    position: relative;
-    transition: left 1.2s ease-in-out;
-    left: -100%;
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    padding: 2em 10em;
 }
 
-.animate-in-left {
-    left: 0;
+.contact-form input, .contact-form textarea, .contact-form button {
+    margin-top: 1rem;
 }
 
 .select {
